Fixe sidebar size on mobile

--- a/src/templates/tutorial/_tutorial-sidebar.scss
+++ b/src/templates/tutorial/_tutorial-sidebar.scss
@@ -10,7 +10,6 @@
 
 .tutorial .sidebar {
 	top: 0;
-	width: 100%;
 
 	@media (min-width: 960px) {
 		width: calc((0.5rem * #{$lineHeight}) * 21);
